# pocketbase-connection

./: .gitignore  README.md  app.py  pocketbase_connection.py  pyproject.toml
.github/workflows/: deploy-pypi.yml
pb_migrations/: 1690700237_created_todos.js  1690893885_updated_todos.js  1690895856_updated_todos.js
