[tool.poetry]
name = "pocketbase-connection"
version = "0.1.0"
description = "Streamlit extension to access pocketbase"
authors = ["Ashwin <bsashwin9@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pocketbase = "^0.9.1"
streamlit = "^1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
